--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,33 @@
-/* # reset */ 
-
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     }
-.container-team{
-    text-align: center;
-     padding: 50px 0;
- }
+
 .team-title {
-     font-size: 2em;
+     font-size: 2rem;
      font-weight: bold;
-     color: #ff4ba8;
-     text-align: center;
-    padding: 50px 0;
+    color: #ff4ba8;
 }
- .team-intro {
-     color: #666;
-    margin-bottom: 30px;
+.team-intro {
+font-size: 1rem;
+color: #666;
+margin-bottom: 2rem;
+}
+    
+.team-card {
+ border: none;
+ overflow: hidden;
+ box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+ border-radius: 0;
  }
+    
+.team-card img {
+ height: 200px;
+object-fit: cover;
+}
+    
+.card-body {
+padding: 1rem;
+}
+    
